--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6547,6 +6547,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://us.sagepub.com/en-us/nam/encyclopedia-of-play-in-todays-society/book232868},
 }
 
+@InProceedings{Carlsson2021,
+  author    = {Carlsson, F. and Sahlgren, M. and Olsson, F. and Gyllensten, A. C.},
+  title     = {GANDALF: a General Character Name Description Dataset for Long Fiction},
+  booktitle = {3rd Workshop on Machine Reading for Question Answering},
+  year      = {2021},
+  pages     = {119-132},
+  owner     = {Vincent},
+  timestamp = {2022.01.01},
+  url       = {https://aclanthology.org/2021.mrqa-1.13/},
+}
+
 @Article{Carney2014,
   author    = {Carney, J. and Wlodarski, R. and Dunbar, R.},
   title     = {Inference or Enaction? The Impact of Genre on the Narrative Processing of Other Minds},
@@ -8607,6 +8618,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.25},
 }
 
+@Article{Couch2000,
+  author    = {Couch, C.},
+  title     = {The Publication and Formats of Comics, Graphic Novels, and Tankobon},
+  journal   = {Image \& Narrative},
+  year      = {2000},
+  volume    = {1},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2021.12.30},
+  url       = {http://www.imageandnarrative.be/inarchive/narratology/chriscouch.htm},
+}
+
 @Article{Couldry2008,
   author    = {Couldry, N.},
   title     = {Mediatization or mediation? Alternative understandings of the emergent space of digital storytelling},
@@ -8746,6 +8769,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.12.15},
   url       = {http://wiredforstory.com/wired-for-story},
+}
+
+@Electronic{Cronin2017,
+  author       = {Cronin, B.},
+  month        = {08},
+  year         = {2017},
+  title        = {How Many Pages Long Have Marvel Comic Stories Been Over the Years?},
+  howpublished = {https://www.cbr.com/marvel-comics-how-many-pages-long/},
+  organization = {{Comic Book Resources}},
+  url          = {https://www.cbr.com/marvel-comics-how-many-pages-long/},
+  owner        = {Vincent},
+  timestamp    = {2021.12.30},
 }
 
 @Article{Cross2001,
@@ -22127,6 +22162,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.24},
 }
 
+@InProceedings{Lafhel2021,
+  author    = {Lafhel, M. and Cherifi, H. and Hassouni, M.},
+  title     = {Exploring network distances for movies comparison},
+  booktitle = {International Conference on Complex Networks and Their Applications},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2022.01.14},
+  url       = {https://hal.archives-ouvertes.fr/hal-03503915},
+}
+
 @InCollection{Laguna2013,
   author    = {Laguna, M. and Martí, R.},
   title     = {Heuristics},
@@ -23153,6 +23198,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://www.aup.nl/en/book/9789462981188/encyclopedia-of-romantic-nationalism-in-europe},
+}
+
+@InCollection{Lefevre2000,
+  author    = {Lefèvre, P.},
+  title     = {The Importance of Being `Published'. A Comparative Study of Different Comics Formats},
+  booktitle = {Comics \& Culture: Analytical and Theoretical Approaches to Comics},
+  publisher = {Museum Tusculanum Press},
+  year      = {2000},
+  pages     = {91-105},
+  owner     = {Vincent},
+  timestamp = {2021.12.30},
+  url       = {https://books.google.fr/books?id=cil7WbXg8BkC},
 }
 
 @Article{Legendre2010,
@@ -31313,6 +31370,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.12.07},
 }
 
+@InProceedings{PastranaVidal2004,
+  author    = {Pastrana-Vidal, R. R. and Gicquel, J. C. and Colomes, C. and Cherifi, H.},
+  title     = {Sporadic frame dropping impact on quality perception},
+  booktitle = {Human Vision and Electronic Imaging IX},
+  year      = {2004},
+  volume    = {5292},
+  series    = {SPIE Proceedings},
+  doi       = {10.1117/12.525746},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
+}
+
 @InProceedings{PastranaVidal2006,
   author    = {Pastrana-Vidal, R. R. and Gicquel, J. C. and Blin, J. L. and Cherifi, H.},
   title     = {Predicting subjective video quality from separated spatial and temporal assessment},
@@ -32693,6 +32762,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tkde.2018.2879658},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@InProceedings{Qiu2018a,
+  author    = {Qiu, J. and Dong, Y. and Ma, H. and Li, J. and Wang, K. and Tang, J.},
+  title     = {Network Embedding as Matrix Factorization: Unifying DeepWalk, LINE, PTE, and node2vec},
+  booktitle = {11th ACM International Conference on Web Search and Data Mining},
+  year      = {2018},
+  pages     = {459-467},
+  doi       = {10.1145/3159652.3159706},
+  owner     = {Vincent},
+  timestamp = {2020.01.21},
 }
 
 @Article{Qu2015,
@@ -34119,6 +34199,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {http://www.stats.ox.ac.uk/~snijders/siena/RSiena_Manual.pdf},
+}
+
+@InProceedings{Rital2002,
+  author    = {Rital, S. and Bretto, A. and Cherifi, H. and Aboutajdine, D.},
+  title     = {A combinatorial edge detection algorithm on noisy images},
+  booktitle = {International Symposium on Video/Image Processing and Multimedia Communications},
+  year      = {2002},
+  doi       = {10.1109/viprom.2002.1026681},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
 }
 
 @InProceedings{Rital2005,
@@ -35685,6 +35775,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1126/science.1240064},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Schieber2017,
+  author    = {Schieber, T. A. and Carpi, L. and Díaz-Guilera, A. and Pardalos, P. M. and Masoller, C. and Ravetti, M. G.},
+  title     = {Quantification of network structural dissimilarities},
+  journal   = {Nature Communications},
+  year      = {2017},
+  volume    = {8},
+  pages     = {13928},
+  doi       = {10.1038/ncomms13928},
+  owner     = {Vincent},
+  timestamp = {2019.04.27},
 }
 
 @Article{Schmader2015,
@@ -40254,6 +40356,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.03.18},
 }
 
+@InProceedings{Tsitsulin2018,
+  author    = {Tsitsulin, A. and Mottin, D. and Karras, P. and Bronstein, A. and Müller, E.},
+  title     = {{NetLSD}: Hearing the Shape of a Graph},
+  booktitle = {24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  year      = {2018},
+  pages     = {2347-2356},
+  doi       = {10.1145/3219819.3219991},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
+}
+
 @InCollection{Tsivian2009,
   author    = {Tsivian, Y.},
   title     = {Cinemetrics, Part of the Humanities' Cyberinfrastructure},
@@ -42620,6 +42733,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Wilson2008,
+  author    = {Wilson, R. C. and Zhu, P.},
+  title     = {A study of graph spectra for comparing graphs and trees},
+  journal   = {Pattern Recognition},
+  year      = {2008},
+  volume    = {41},
+  number    = {9},
+  pages     = {2833-2841},
+  doi       = {10.1016/j.patcog.2008.03.011},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
+}
+
 @Book{Wilson2010,
   title     = {Introduction to Graph Theory},
   publisher = {Pearson},
@@ -43603,7 +43729,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InProceedings{Yavuz2020,
   author    = {Yavuz, M. C.},
   title     = {Analyses of Character Networks in Dramatic Works by Using Graphs},
-  booktitle = {7th International Conference on Behavioural and Social Computing},
+  booktitle = {7th International Conference on Behavioral and Social Computing},
   year      = {2020},
   doi       = {10.1109/BESC51023.2020.9348328},
   owner     = {Vincent},
