--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1399,6 +1399,18 @@
   timestamp    = {2018.11.11},
 }
 
+@InProceedings{Andrea2020,
+  author    = {Andrea, M. and Dominique, B. and Dell’Orletta, F.},
+  title     = {The Style of a Successful Story: a Computational Study on the Fanfiction Genre},
+  booktitle = {Italian Conference on Computational Linguistics},
+  year      = {2020},
+  volume    = {2769},
+  series    = {CEUR Workshop Proceedings},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {http://ceur-ws.org/Vol-2769/},
+}
+
 @Book{Andrew1984,
   title     = {Concepts in Film Theory},
   publisher = {Oxford University Press},
@@ -3243,6 +3255,20 @@
   url       = {https://books.google.fr/books/about/Handbook_of_Stress.html?id=jOIJAQAAMAAJ},
 }
 
+@Article{Bellman1959,
+  author    = {Bellman, R. and Kalaba, R.},
+  title     = {On adaptive control processes},
+  journal   = {IRE Transactions on Automatic Control},
+  year      = {1959},
+  volume    = {4},
+  number    = {2},
+  pages     = {1-9},
+  doi       = {10.1109/tac.1959.1104847},
+  groups    = {Sequence Analysis},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
 @Article{BelloOrgaz2016,
   author    = {Bello-Orgaz, G. and Jung, J. J. and Camacho, D.},
   title     = {Social big data: Recent achievements and new challenges},
@@ -3438,6 +3464,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://books.google.fr/books/about/Théorie_des_graphes_et_ses_applications.html?id=T_YrAAAAIAAJ},
+}
+
+@Article{Berger2021,
+  author    = {Berger, J. and Kim, Y. D. and Meyer, R.},
+  title     = {What Makes Content Engaging? How Emotional Dynamics Shape Success},
+  journal   = {Journal of Consumer Research},
+  year      = {2021},
+  volume    = {48},
+  number    = {2},
+  pages     = {235-250},
+  doi       = {10.1093/jcr/ucab010},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
 }
 
 @Article{Bergeron1991,
@@ -4028,7 +4067,7 @@
 }
 
 @Book{Bird2009,
-  title     = {Natural Language Processing with Python},
+  title     = {Natural language processing with Python: analyzing text with the natural language toolkit},
   publisher = {O'Reilly Media},
   year      = {2009},
   author    = {Bird, S. and Loper, E. and Klein, E.},
@@ -5320,6 +5359,18 @@
   timestamp = {2019.04.11},
 }
 
+@Electronic{Bratanic2021,
+  author       = {Bratanic, T.},
+  month        = {07},
+  year         = {2021},
+  title        = {Turn a Harry Potter Book into a Knowledge Graph},
+  howpublished = {\url{https://medium.com/neo4j/turn-a-harry-potter-book-into-a-knowledge-graph-ffc1c45afcc8}},
+  organization = {Medium},
+  url          = {https://medium.com/neo4j/turn-a-harry-potter-book-into-a-knowledge-graph-ffc1c45afcc8},
+  owner        = {Vincent},
+  timestamp    = {2022.01.28},
+}
+
 @InProceedings{Brdiczka2006,
   author    = {Brdiczka, O. and Vaufreydaz, D. and Maisonnasse, J. and Reignier, P.},
   title     = {Unsupervised Segmentation of Meeting Configurations and Activities using Speech Activity Detection},
@@ -5767,6 +5818,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {http://ftp.cs.toronto.edu/pub/gh/Budanitsky+Hirst-2001.pdf},
+}
+
+@InProceedings{Buechler2018,
+  author    = {Büchler, M. and Franzini, G. and Kestemont, M. and Manjavacas, E.},
+  title     = {The recreation of harry potter: Tracing style and content across novels, movie scripts and fanfiction},
+  booktitle = {Digital Humanities},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://dh2018.adho.org/the-re-creation-of-harry-potter-tracing-style-and-content-across-novels-movie-scripts-and-fanfiction/},
 }
 
 @Book{Bugge1905,
@@ -6346,6 +6407,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://books.google.fr/books/about/The_Hero_with_a_Thousand_Faces.html?id=I1uFuXlvFgMC&redir_esc=y},
 }
 
+@InProceedings{Campbell2016,
+  author    = {Campbell, J. and Aragon, C. and Davis, K. and Evans, S. and Evans, A. and Randall, D.},
+  title     = {Thousands of Positive Reviews},
+  booktitle = {19th ACM Conference on Computer-Supported Cooperative Work \& Social Computing},
+  year      = {2016},
+  doi       = {10.1145/2818048.2819934},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
 @Article{Campiteli2013,
   author    = {Campiteli, M. G. and Holanda, A. J. and Soares, L. D. H. and Soles, P. R. C. and Kinouchi, O.},
   title     = {Lobby index as a network centrality measure},
@@ -6547,6 +6618,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://us.sagepub.com/en-us/nam/encyclopedia-of-play-in-todays-society/book232868},
 }
 
+@InProceedings{Carlsson2021,
+  author    = {Carlsson, F. and Sahlgren, M. and Olsson, F. and Gyllensten, A. C.},
+  title     = {GANDALF: a General Character Name Description Dataset for Long Fiction},
+  booktitle = {3rd Workshop on Machine Reading for Question Answering},
+  year      = {2021},
+  pages     = {119-132},
+  owner     = {Vincent},
+  timestamp = {2022.01.01},
+  url       = {https://aclanthology.org/2021.mrqa-1.13/},
+}
+
 @Article{Carney2014,
   author    = {Carney, J. and Wlodarski, R. and Dunbar, R.},
   title     = {Inference or Enaction? The Impact of Genre on the Narrative Processing of Other Minds},
@@ -6652,6 +6734,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://books.google.fr/books/about/Shakespearean_Tragedy_and_Its_Double.html?id=DOAgjFZm-6wC&redir_esc=y},
+}
+
+@Article{Carvallo2019,
+  author    = {Carvallo, A. and Parra, D.},
+  title     = {Analyzing Network Effects on a Fanfiction Community},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.SI},
+  pages     = {1909.02886},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://arxiv.org/abs/1909.02886v2},
 }
 
 @Article{Casey2010,
@@ -8607,6 +8701,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.25},
 }
 
+@Article{Couch2000,
+  author    = {Couch, C.},
+  title     = {The Publication and Formats of Comics, Graphic Novels, and Tankobon},
+  journal   = {Image \& Narrative},
+  year      = {2000},
+  volume    = {1},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2021.12.30},
+  url       = {http://www.imageandnarrative.be/inarchive/narratology/chriscouch.htm},
+}
+
 @Article{Couldry2008,
   author    = {Couldry, N.},
   title     = {Mediatization or mediation? Alternative understandings of the emergent space of digital storytelling},
@@ -8748,6 +8854,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://wiredforstory.com/wired-for-story},
 }
 
+@Electronic{Cronin2017,
+  author       = {Cronin, B.},
+  month        = {08},
+  year         = {2017},
+  title        = {How Many Pages Long Have Marvel Comic Stories Been Over the Years?},
+  howpublished = {https://www.cbr.com/marvel-comics-how-many-pages-long/},
+  organization = {{Comic Book Resources}},
+  url          = {https://www.cbr.com/marvel-comics-how-many-pages-long/},
+  owner        = {Vincent},
+  timestamp    = {2021.12.30},
+}
+
 @Article{Cross2001,
   author    = {Cross, R. and Parker, A. and Prusak, L. and Borgatti, S. P.},
   title     = {Knowing what we know: Supporting knowledge creation and sharing in social networks},
@@ -8804,6 +8922,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1093/applin/ams045},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@InProceedings{Cuesta-Lazaro2022,
+  author    = {Cuesta-Lazaro, C. and Prasad, A. and Wood, T.},
+  title     = {What does the sea say to the shore? A BERT based DST style approach for speaker to dialogue attribution in novels},
+  booktitle = {Annual Meetings of the Association for Computational Linguistics},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.03.15},
+  url       = {https://www.amazon.science/publications/what-does-the-sea-say-to-the-shore-a-bert-based-dst-style-approach-for-speaker-to-dialogue-attribution-in-novels},
 }
 
 @Article{Cui2019,
@@ -9637,6 +9765,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.11.30},
 }
 
+@Article{DelVecchio2020,
+  author    = {Del Vecchio, M. and Kharlamov, A. and Parry, G. and Pogrebna, G.},
+  title     = {Improving productivity in Hollywood with data science: Using emotional arcs of movies to drive product and service innovation in entertainment industries},
+  journal   = {Journal of the Operational Research Society},
+  year      = {2020},
+  volume    = {72},
+  number    = {5},
+  pages     = {1110-1137},
+  doi       = {10.1080/01605682.2019.1705194},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
 @Article{Delvenne2010,
   author    = {Delvenne, J. C. and Yaliraki, S. N. and Barahona, M.},
   title     = {Stability of graph communities across time scales},
@@ -10149,6 +10290,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.03.25},
   url       = {http://www.lrec-conf.org/proceedings/lrec2004/pdf/5.pdf},
+}
+
+@Article{Dodds2011,
+  author    = {Sheridan Dodds, P. and Decker Harris, K. and Kloumann, I. M. and Bliss, C. A. and Danforth, C. M.},
+  title     = {Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter},
+  journal   = {PLoS ONE},
+  year      = {2011},
+  volume    = {6},
+  number    = {12},
+  pages     = {e26752},
+  doi       = {10.1371/journal.pone.0026752},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
 }
 
 @Article{Dodds2015,
@@ -13364,6 +13518,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2010.06.03},
   url       = {http://books.google.com/books?id=VcxqQgAACAAJ&dq=The+Development+of+Social+Network+Analysis:+A+Study+in+the+Sociology+of+Science&hl=en&ei=xIlhTIfFONq5jAfU4eifCQ&sa=X&oi=book_result&ct=result&resnum=1&ved=0CCgQ6AEwAA},
+}
+
+@InProceedings{Frens2018,
+  author    = {Frens, J. and Davis, R. and Lee, J. and Zhang, D. and Aragon, C.},
+  title     = {Reviews Matter: How Distributed Mentoring Predicts Lexical Diversity on Fanfiction.net},
+  booktitle = {Connected Learning Summit},
+  year      = {2018},
+  pages     = {87-97},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://2018.connectedlearningsummit.org/proceedings/},
 }
 
 @Article{Frermann2018,
@@ -17190,6 +17355,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.01.05},
 }
 
+@Electronic{Hickey2014,
+  author       = {Hickey, W.},
+  month        = {10},
+  year         = {2014},
+  title        = {Comic Books Are Still Made By Men, For Men And About Men},
+  howpublished = {\url{https://fivethirtyeight.com/features/women-in-comic-books/}},
+  organization = {FiveThirtyEight},
+  url          = {https://fivethirtyeight.com/features/women-in-comic-books/},
+  owner        = {Vincent},
+  timestamp    = {2022.03.13},
+}
+
 @TechReport{Hickey2017,
   author      = {Hickey, W. and Koeze, E. and Dottle, R. and Wezerek, G.},
   title       = {The next Bechdel test},
@@ -17238,6 +17415,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1186/2193-1801-3-362},
   owner     = {Vincent},
   timestamp = {2019.08.18},
+}
+
+@Book{Hilbe2009,
+  title     = {Negative Binomial Regression},
+  publisher = {Cambridge University Press},
+  year      = {2009},
+  author    = {Hilbe, J. M.},
+  doi       = {10.1017/cbo9780511973420},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
 }
 
 @Article{Hill2003,
@@ -18560,6 +18747,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/N16-1180},
   owner     = {Vincent},
   timestamp = {2018.02.15},
+}
+
+@Article{Jaccard1912,
+  author    = {Jaccard, P.},
+  title     = {The distribution of the flora in the alpine zone},
+  journal   = {New Phytologist},
+  year      = {1912},
+  volume    = {11},
+  number    = {2},
+  pages     = {37-50},
+  doi       = {j.1469-8137.1912.tb05611.x},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Jack2012,
@@ -22127,6 +22327,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.24},
 }
 
+@InProceedings{Lafhel2021,
+  author    = {Lafhel, M. and Cherifi, H. and Hassouni, M.},
+  title     = {Exploring network distances for movies comparison},
+  booktitle = {International Conference on Complex Networks and Their Applications},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2022.01.14},
+  url       = {https://hal.archives-ouvertes.fr/hal-03503915},
+}
+
 @InCollection{Laguna2013,
   author    = {Laguna, M. and Martí, R.},
   title     = {Heuristics},
@@ -23153,6 +23363,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.19},
   url       = {https://www.aup.nl/en/book/9789462981188/encyclopedia-of-romantic-nationalism-in-europe},
+}
+
+@InCollection{Lefevre2000,
+  author    = {Lefèvre, P.},
+  title     = {The Importance of Being `Published'. A Comparative Study of Different Comics Formats},
+  booktitle = {Comics \& Culture: Analytical and Theoretical Approaches to Comics},
+  publisher = {Museum Tusculanum Press},
+  year      = {2000},
+  pages     = {91-105},
+  owner     = {Vincent},
+  timestamp = {2021.12.30},
+  url       = {https://books.google.fr/books?id=cil7WbXg8BkC},
 }
 
 @Article{Legendre2010,
@@ -27495,6 +27717,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.worldcat.org/title/technique-of-television-production/oclc/3968680},
 }
 
+@InProceedings{Milli2016,
+  author    = {Milli, S. and Bamman, D.},
+  title     = {Beyond Canonical Texts: A Computational Analysis of Fanfiction},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2016},
+  pages     = {2048-2053},
+  doi       = {10.18653/v1/d16-1218},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
 @Article{Milo2002,
   author    = {Milo, R. and Shen-Orr, S. and Itzkovitz, S. and Kashtan, N. and Chklovskii, D. and Alon, U.},
   title     = {Network motifs: simple building blocks of complex networks},
@@ -31230,6 +31463,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://trove.nla.gov.au/work/13538000?q&sort=holdings+desc&_=1555687627395&versionId=26333990},
 }
 
+@InCollection{Parulian2022,
+  author    = {Parulian, N. N. and Worthey, G. and Downie, J. S.},
+  title     = {An Ensemble Framework for Dynamic Character Relationship Sentiment in Fiction},
+  booktitle = {International Conference on Information},
+  publisher = {Springer},
+  year      = {2022},
+  volume    = {13192},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {414-424},
+  doi       = {10.1007/978-3-030-96957-8_35},
+  owner     = {Vincent},
+  timestamp = {2022.03.11},
+}
+
 @Article{Parvulescu2020,
   author    = {Parvulescu, A. and Boatcă, M.},
   title     = {(Dis)Counting Languages: Between Hugó Meltzl and Liviu Rebreanu},
@@ -31311,6 +31558,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.95.022301},
   owner     = {Vincent},
   timestamp = {2017.12.07},
+}
+
+@InProceedings{PastranaVidal2004,
+  author    = {Pastrana-Vidal, R. R. and Gicquel, J. C. and Colomes, C. and Cherifi, H.},
+  title     = {Sporadic frame dropping impact on quality perception},
+  booktitle = {Human Vision and Electronic Imaging IX},
+  year      = {2004},
+  volume    = {5292},
+  series    = {SPIE Proceedings},
+  doi       = {10.1117/12.525746},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
 }
 
 @InProceedings{PastranaVidal2006,
@@ -31835,6 +32094,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3758/s13423-014-0585-6},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Pianzola2020,
+  author    = {Pianzola, F. and Rebora, S. and Lauer, G.},
+  title     = {Wattpad as a resource for literary studies. Quantitative and qualitative examples of the importance of digital social reading and readers' comments in the margins},
+  journal   = {PLoS ONE},
+  year      = {2020},
+  volume    = {15},
+  number    = {1},
+  pages     = {e0226708},
+  doi       = {10.1371/journal.pone.0226708},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
 }
 
 @Book{Pierce1878,
@@ -32695,6 +32967,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@InProceedings{Qiu2018a,
+  author    = {Qiu, J. and Dong, Y. and Ma, H. and Li, J. and Wang, K. and Tang, J.},
+  title     = {Network Embedding as Matrix Factorization: Unifying DeepWalk, LINE, PTE, and node2vec},
+  booktitle = {11th ACM International Conference on Web Search and Data Mining},
+  year      = {2018},
+  pages     = {459-467},
+  doi       = {10.1145/3159652.3159706},
+  owner     = {Vincent},
+  timestamp = {2020.01.21},
+}
+
 @Article{Qu2015,
   author    = {Qu, W. and Zhang, Y. and Wang, D. and Feng, S. and Yu, G.},
   title     = {Semantic movie summarization based on string of {IE}-{RoleNets}},
@@ -33224,6 +33507,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11192-014-1402-8},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@Book{Rawlings2018,
+  title     = {Americans on Fiction, 1776-1900},
+  publisher = {Routledge},
+  year      = {2018},
+  author    = {Rawlings, P.},
+  doi       = {10.4324/9781351223461},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
 }
 
 @InProceedings{Rder2015,
@@ -34121,6 +34414,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.stats.ox.ac.uk/~snijders/siena/RSiena_Manual.pdf},
 }
 
+@InProceedings{Rital2002,
+  author    = {Rital, S. and Bretto, A. and Cherifi, H. and Aboutajdine, D.},
+  title     = {A combinatorial edge detection algorithm on noisy images},
+  booktitle = {International Symposium on Video/Image Processing and Multimedia Communications},
+  year      = {2002},
+  doi       = {10.1109/viprom.2002.1026681},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
+}
+
 @InProceedings{Rital2005,
   author    = {Rital, S. and Cherifi, H. and Miguet, S.},
   title     = {Weighted Adaptive Neighborhood Hypergraph Partitioning for Image Segmentation},
@@ -34745,6 +35048,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Rubin2013,
+  author    = {Rubin, V. L. and Girouard, V.},
+  title     = {Comparative stylistic fanfiction analysis: popular and unpopular fics across eleven fandoms},
+  booktitle = {Annual Conference of the Canadian Association for Information Science},
+  year      = {2013},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://ir.lib.uwo.ca/fimspub/65/},
+}
+
 @InProceedings{Rubner1998,
   author    = {Rubner, Y. and Tomasi, C. and Guibas, L. J.},
   title     = {A metric for distributions with applications to image databases},
@@ -35162,6 +35475,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.11.29},
 }
 
+@InCollection{Sack2020,
+  author    = {Sack, G. A.},
+  title     = {Geometries of Desire: Simulating René Girard's Mimetic Theory},
+  booktitle = {Conference of The Computational Social Science Society of the Americas},
+  publisher = {Springer},
+  year      = {2020},
+  pages     = {217-243},
+  doi       = {10.1007/978-3-030-83418-0_13},
+  owner     = {Vincent},
+  timestamp = {2022.01.07},
+}
+
 @InProceedings{Sadikov2009,
   author    = {Sadikov, E. and Parameswaran, A. G. and Venetis, P.},
   title     = {Blogs as Predictors of Movie Success},
@@ -35475,6 +35800,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pdfs.semanticscholar.org/51e8/eb339b48ee13c6e4841deddaae0c35acd203.pdf},
 }
 
+@InProceedings{Santos2022,
+  author    = {Santos, D. and Willrich, R. and Langfeldt, M. and Gaiotto de Moraes, R. and Mota, C. and Pires, E. and Schumacher, R. and Silva Pereira, P.},
+  title     = {Identifying Literary Characters in Portuguese - Challenges of an International Shared Task},
+  booktitle = {International Conference on Computational Processing of the Portuguese Language},
+  year      = {2022},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {413-419},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-98305-5_39},
+  owner     = {Vincent},
+  timestamp = {2022.03.19},
+}
+
 @InProceedings{Sap2017,
   author    = {Sap, M. and Prasettio, M. C. and Holtzman, A. and Rashkin, H. and Choi, Y.},
   title     = {Connotation Frames of Power and Agency in Modern Films},
@@ -35510,6 +35848,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.75.027105},
   owner     = {Vincent},
   timestamp = {2012.04.25},
+}
+
+@Book{Sarbin1986,
+  title     = {Narrative Psychology: The Storied Nature of Human Conduct},
+  publisher = {Praeger},
+  year      = {1986},
+  author    = {Sarbin, T. R.},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://books.google.fr/books/about/Narrative_Psychology.html?id=OJFrAAAAIAAJ},
 }
 
 @Article{Sarkar2005,
@@ -35685,6 +36033,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1126/science.1240064},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Schieber2017,
+  author    = {Schieber, T. A. and Carpi, L. and Díaz-Guilera, A. and Pardalos, P. M. and Masoller, C. and Ravetti, M. G.},
+  title     = {Quantification of network structural dissimilarities},
+  journal   = {Nature Communications},
+  year      = {2017},
+  volume    = {8},
+  pages     = {13928},
+  doi       = {10.1038/ncomms13928},
+  owner     = {Vincent},
+  timestamp = {2019.04.27},
 }
 
 @Article{Schmader2015,
@@ -36419,6 +36779,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.04},
 }
 
+@PhdThesis{Shahsavari2022,
+  author      = {Shahsavari, S.},
+  title       = {Automated Conspiracy Theory Detection and Narrative Consensus Tracking in Social Media},
+  year        = {2022},
+  type        = {PhD Thesis},
+  institution = {University of California Los Angeles},
+  owner       = {Vincent},
+  timestamp   = {2022.03.22},
+  url         = {https://escholarship.org/content/qt4nf5m1h7/qt4nf5m1h7.pdf},
+}
+
 @Book{Shalev-Shwartz2014,
   title     = {Understanding Machine Learning from Theory to Algorithms},
   publisher = {Cambridge University Press},
@@ -36533,6 +36904,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ACCESS.2017.2652486},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Electronic{Shendruk2017,
+  author       = {Shendruk, A.},
+  month        = {07},
+  year         = {2017},
+  title        = {Analyzing the Gender Representation of 34,476 Comic Book Characters},
+  howpublished = {\url{https://pudding.cool/2017/07/comics/}},
+  organization = {ThePudding},
+  url          = {https://pudding.cool/2017/07/comics/},
+  owner        = {Vincent},
+  timestamp    = {2022.03.13},
 }
 
 @InProceedings{Shervashidze2009,
@@ -39169,6 +39552,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Tavenard2020,
+  author    = {Tavenard, R. and Faouzi, J. and Vandewiele, G. and Divo, F. and Androz, G. and Holtz, C. and Payne, M. and Yurchak, R. and Rußwurm, M. and Kolar, K. and Woods, E.},
+  title     = {Tslearn, A Machine Learning Toolkit for Time Series Data},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2020},
+  volume    = {21},
+  number    = {118},
+  pages     = {1-6},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+  url       = {https://www.jmlr.org/papers/v21/20-091.html},
+}
+
 @Book{Taylor1970,
   title     = {Balance in Small Groups},
   publisher = {Van Nostrand Reinhold},
@@ -40252,6 +40648,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TCSVT.2013.2269186},
   owner     = {Vincent},
   timestamp = {2018.03.18},
+}
+
+@InProceedings{Tsitsulin2018,
+  author    = {Tsitsulin, A. and Mottin, D. and Karras, P. and Bronstein, A. and Müller, E.},
+  title     = {{NetLSD}: Hearing the Shape of a Graph},
+  booktitle = {24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  year      = {2018},
+  pages     = {2347-2356},
+  doi       = {10.1145/3219819.3219991},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
 }
 
 @InCollection{Tsivian2009,
@@ -41733,6 +42140,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@InProceedings{Wang2020c,
+  author    = {Wang, X. and Zhang, S. and Smetannikov, I.},
+  title     = {Fiction Popularity Prediction Based on Emotion Analysis},
+  booktitle = {International Conference on Control, Robotics and Intelligent System},
+  year      = {2020},
+  doi       = {10.1145/3437802.3437831},
+  owner     = {Vincent},
+  timestamp = {2022.03.25},
+}
+
 @Article{Wang2020t,
   author    = {Wang, C. and Wang, C. and Wang, Z. and Ye, X. and Yu, P. S.},
   title     = {Edge2vec: Edge-based Social Network Embedding},
@@ -42618,6 +43035,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1220575.1220619},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Wilson2008,
+  author    = {Wilson, R. C. and Zhu, P.},
+  title     = {A study of graph spectra for comparing graphs and trees},
+  journal   = {Pattern Recognition},
+  year      = {2008},
+  volume    = {41},
+  number    = {9},
+  pages     = {2833-2841},
+  doi       = {10.1016/j.patcog.2008.03.011},
+  owner     = {Vincent},
+  timestamp = {2022.01.19},
 }
 
 @Book{Wilson2010,
@@ -44019,6 +44449,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aran.library.nuigalway.ie/xmlui/handle/10379/4381},
+}
+
+@Article{Zadeh2022,
+  author    = {Zadeh, Z. S. H. and Sabri, N. and Chamani, H. and Bahrak, B.},
+  title     = {Quantitative analysis of fanfictions' popularity},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2022},
+  volume    = {12},
+  pages     = {42},
+  doi       = {10.1007/s13278-021-00854-9},
+  owner     = {Vincent},
+  timestamp = {2022.03.08},
 }
 
 @Article{Zajonc1968,
